--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,11 @@
         "import/prefer-default-export": "off",
         "class-methods-use-this": "off",
         "no-underscore-dangle": "off",
-        "no-param-reassign": "off"
+        "no-param-reassign": "off",
+        "no-bitwise": "off",
+        "no-plusplus": "off",
+        "no-await-in-loop": "off",
+        "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"]
       }
     }
   ],
