--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiny-compressor",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A command line JPG, PNG and WebP images compressor using TinyPNG API",
   "type": "module",
   "main": "dist/index.js",
@@ -28,7 +28,8 @@
   "prepublish": "tsc",
   "scripts": {
     "prepare": "tsc",
-    "local": "npm i -g ./"
+    "local-install": "npm i -g ./",
+    "local-update": "tsc"
   },
   "author": "Alexander Dovlatov <dev@digkid.ru> (https://dev.digikid.ru/)",
   "license": "MIT",
@@ -49,10 +50,11 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "file-type": "^17.1.2",
     "inquirer": "^9.0.0",
-    "log-symbols": "^5.1.0",
     "node-fetch": "^3.2.6",
     "nsfw": "^2.2.2",
-    "ora": "^6.1.0"
+    "ora": "^6.1.0",
+    "os-locale": "^6.0.2",
+    "valid-filename": "^4.0.0"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
